<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.DetailFragment">

    <data>
        <variable
            name="sharedViewModel"
            type="com.example.shoestoreinventory.SharedViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- We have label TextViews and EditViews.
        ConstraintLayout allows the positioning of each view relative to the other views or the parent,
        and it provides a flat hierarchical and responsive structure. -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/detail_shoe_name_label_textview"
                style="@style/LabelStyle"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/shoe_name_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/detail_company_label_textview"
                style="@style/LabelStyle"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/shoe_company_label"
                app:layout_constraintEnd_toStartOf="@+id/detail_label_barrier"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_shoe_name_label_textview" />

            <TextView
                android:id="@+id/detail_shoe_size_label_textview"
                style="@style/LabelStyle"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/shoe_size_label"
                app:layout_constraintEnd_toStartOf="@+id/detail_label_barrier"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_company_label_textview" />

            <TextView
                android:id="@+id/detail_description_label_textview"
                style="@style/LabelStyle"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/shoe_description_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_shoe_size_label_textview" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/detail_label_barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="end"
                app:constraint_referenced_ids="detail_shoe_size_label_textview,detail_description_label_textview,detail_company_label_textview,detail_shoe_name_label_textview"
                tools:layout_editor_absoluteX="16dp" />

            <EditText
                android:id="@+id/detail_shoe_name_editext"
                style="@style/EditTextSyle"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:autofillHints="name"
                android:hint="@string/enter_shoe_name"
                android:inputType="textPersonName"
                android:text="@{sharedViewModel.anotherShoe.name}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/detail_label_barrier"
                app:layout_constraintTop_toTopOf="@+id/detail_shoe_name_label_textview" />

            <EditText
                android:id="@+id/detail_company_editext"
                style="@style/EditTextSyle"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:autofillHints="name"
                android:hint="@string/enter_company_name"
                android:inputType="textPersonName"
                android:text="@{sharedViewModel.anotherShoe.company}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/detail_label_barrier"
                app:layout_constraintTop_toTopOf="@+id/detail_company_label_textview" />

            <EditText
                android:id="@+id/detail_shoe_size_editext"
                style="@style/EditTextSyle"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:autofillHints="number"
                android:hint="@string/enter_shoe_name"
                android:inputType="numberDecimal"
                android:text="@{String.valueOf(sharedViewModel.anotherShoe.size)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/detail_label_barrier"
                app:layout_constraintTop_toTopOf="@+id/detail_shoe_size_label_textview" />

            <EditText
                android:id="@+id/detail_description_editext"
                style="@style/EditTextSyle"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:autofillHints="description"
                android:hint="@string/enter_description"
                android:inputType="textAutoComplete"
                android:text="@{sharedViewModel.anotherShoe.description}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/detail_label_barrier"
                app:layout_constraintTop_toTopOf="@+id/detail_description_label_textview" />

            <Button
                android:id="@+id/detail_cancel_button"
                style="@style/ButtonStyle"
                android:layout_width="@dimen/button_width"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/double_margin"
                android:text="@string/cancel"
                android:onClick="@{() -> sharedViewModel.onDetailCancel()}"
                app:layout_constraintEnd_toStartOf="@+id/detail_save_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_description_editext" />

            <Button
                android:id="@+id/detail_save_button"
                style="@style/ButtonStyle"
                android:layout_width="@dimen/button_width"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:text="@string/save"
                android:onClick="@{() -> sharedViewModel.onDetailSave()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/detail_cancel_button"
                app:layout_constraintTop_toTopOf="@+id/detail_cancel_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>